# Pulse_Bots

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
bots/news/: __init__.py  __main__.py  app.py  config.py  jobs.py  keyboards.py  main.py  middlewares.py  pipeline.py  reader.py
bots/news/handlers/: admin.py  callbacks.py  commands.py
migrations/: README  env.py
migrations/versions/: 20260522_1200_initial_schema.py
scripts/: init_db.py  login_telethon.py  seed_sources.py
shared/: __init__.py  config.py  logging.py
shared/ai/: __init__.py  avalai_client.py  prompts.py  summarizer.py
shared/cache/: __init__.py  memory_cache.py
shared/db/: __init__.py  base.py
shared/db/models/: __init__.py  article.py  channel.py  media.py  source.py  user.py
shared/db/repositories/: __init__.py  article_repo.py  channel_repo.py  media_repo.py  source_repo.py  user_repo.py
shared/ingest/: __init__.py  message_parser.py  telethon_client.py
shared/media/: __init__.py  deduplicator.py  processor.py  types.py
shared/publishers/: __init__.py  base.py  formatters.py  telegram_publisher.py
shared/storage/: __init__.py  base.py  local_backend.py  minio_backend.py
shared/utils/: retry.py  text.py  time.py
