[project]
name = "pulse-bots"
version = "0.1.0"
description = "Multi-bot Telegram aggregator system (phase 1: news)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Telegram
    "telethon>=1.36.0",
    "aiogram>=3.13.0",
    # HTTP
    "httpx>=0.27.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.2",
    # Object storage
    "aioboto3>=13.1.0",
    # Media
    "pillow>=10.4.0",
    # AI (Avalai is OpenAI-API-compatible — we hit it via the openai SDK)
    "openai>=1.40.0",
    # Scheduling
    "apscheduler>=3.10.4",
    # Config & logging
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "loguru>=0.7.2",
    # Utilities
    "python-dateutil>=2.9.0",
    "orjson>=3.10.6",
    "tenacity>=8.5.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.5",
    "mypy>=1.11.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared", "bots"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S", "C4", "SIM", "RUF"]
ignore = ["S101", "S104", "B008"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
